--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <link rel="icon" type="image/x-icon" href="style/images/culture_art_flower_architecture_pattern_thai_icon_230262.ico">
   
-  <link rel="stylesheet" href="./style/style.css" />
+  <link rel="stylesheet" href="style.css" />
 
 </head>
 
